<resources>
    <string name="upload_log_url" translatable="false">http://irobbing.com/savelog.php</string>
    <string name="app_name">DVR</string>
    <string name="preview">Preview</string>
    <string name="settings">Settings</string>
    <string name="files">Files</string>
    <string name="start_record">Start Record</string>
    <string name="start_transfer">Start Transfer</string>
    <string name="switch_camera">Swirch Camera</string>
    <string name="camera_preview">Camera Preview</string>
    <string name="auto_run_when_boot">auto run when boot</string>
    <string name="video_size">video size</string>
    <string name="video_duration">video duration</string>
    <string name="audio_sync">audio</string>
    <string name="collision_sensitivity">collision sensitivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_group">Add Group</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_show_voice">speaking...</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="download_version_key">versionCode</string>
    <string name="download_version_name">versionName</string>
    <string name="download_url_key">updateURL</string>
    <string name="update_url" translatable="false">http://www.irobbing.com/download/pocdemo/update_pocdemo.json</string>
    <string name="title_activity_show_photo">ShowPhotoActivity</string>
    <string name="my_msg_cancel">You withdrew a message</string>
    <string name="other_msg_cancel">Message has withdrawn</string>
    <string name="btn_download_image">Download image</string>
    <string name="modify_name_tip">To make it easy for friends to identify you, please click on the name to modify</string>
    <string name="permission_message">Set permissions</string>
    <string name="download_version_update_description">versionDesc</string>
    <string name="buffering">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="add_link_man">Add Friends</string>
    <string name="contain">Contains:</string>
    <string name="download_already_latest">Latest version already.</string>
    <string name="download_btn_later">Remind me later</string>
    <string name="download_btn_start">Start downloading</string>
    <string name="download_check_version_fail">Version checking error:</string>
    <string name="download_doing">Downloading,please wait...</string>
    <string name="download_failed">Download failed</string>
    <string name="download_find_new_version">New version is ready,download now？\n current version:%1$s\n latest version:%2$s</string>
    <string name="download_progress_btn_background">Download background</string>
    <string name="download_progress_btn_cancel">Cancel</string>
    <string name="download_progress_title">Downloading</string>
    <string name="download_prompt_title">Prompts:</string>
    <string name="my_team_nick_name">My nick name</string>
    <string name="prompt">0-Lowest priority，15-Highest priority</string>
    <string name="search_prompt">Name/Phone/License plate number</string>
    <string name="team_delete_and_quit">Delete and quit</string>
    <string name="team_dismiss">Dismiss the team</string>
    <string name="unknown_name">Unknown</string>
    <string name="tracking_location">Tracking the location</string>
    <string name="detailed_information">Detailed Information</string>
    <string name="options_first">Options</string>
    <string name="add_friend">Add Friend</string>
    <string name="create_team">Create Group</string>
    <string name="message_notification">Message Notification</string>
    <string name="search">Search</string>
    <string name="letter_tile_letter_font_family" translatable="false">sans-serif-thin</string>
    <string name="letter_tile_letter_font_english" translatable="false">sans-serif-light</string>
    <string name="video_invited_title">Video Call</string>
    <string name="video_invited_single_content">%s invite you for a video chat</string>
    <string name="video_invited_team_content">Group %s invite you for a video chat</string>
    <string name="video_invited_ok">Accept</string>
    <string name="video_invited_cancel">Cancel</string>
    <string name="video_not_wifi">Using mobile data to video chat?</string>
    <string name="download_not_wifi">Using mobile data to download?</string>
    <string name="dialog_send_image">send_image:</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_send">send</string>
    <string name="document_pic">Document Pic</string>
    <string name="document_video">Document Video</string>
    <string name="document_type">Document Type</string>
    <string name="document_all">Document All</string>
    <string name="document_group">Document Group</string>
    <string name="document_close">Document Close</string>
    <string name="document_reverse">Document Reverse</string>
    <string name="document_order">Document Order</string>
    <string name="document_group_type">group</string>
    <string name="document_linkman_type">linkman</string>
    <string name="document_all_type">all</string>
    <string name="document_all_linkman_type">all linkman</string>
    <string name="document_all_group_type">all group</string>
    <string name="switch_to_video">Switch to video chat</string>
    <string name="switch_to_voice">Switch to voice chat</string>
    <string name="chat_close">Close</string>
    <string name="group_title">Group</string>
    <string name="contacts_title">Contacts</string>
    <string name="self_title">Personal Information</string>
    <string name="road_share">Road Share</string>
    <string name="search_friend">Search</string>
    <string name="my_notice">Notice</string>
    <string name="main_name">Video POC</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="null_person">Free</string>
    <string name="no_road_request">No Road Request</string>
    <string name="close_room_success">Chat room closed</string>
    <string name="group_count">Group count:</string>
    <string name="usb_open_failed"> Camera not ready，please try again later！</string>
    <string name="camera_node_not_exist"> Node not exist,camera not ready,please try again later！</string>
    <string name="bluetooth_disconnect_close_speak">BT disconnect,chat stoped</string>
    <string name="no_notice">No Notice Msg</string>
    <string name="accept">accept</string>
    <string name="refuse">refuse</string>
    <string name="cancel">Cancel</string>
    <string name="j_pickerview_cancel">Cancel</string>
    <string name="j_pickerview_submit">Sure</string>
    <string name="j_pickerview_title">Location</string>
    <string name="long_click_get_address"><Data><![CDATA[search the car <font color="#ffffff"><b>%s</b></font>?<br>]]></Data>
    </string>
    <string name="nearby">Nearby</string>
    <string name="road_inquiry">Road Inquiry</string>
    <string name="search_show">Be sure to search for vehicles near that location ?</string>
    <string name="find_strangers_on_condition">Find strangers on condition</string>
    <string name="check_near_car">look at the nearby car</string>
    <string name="search_stranger">Search</string>
    <string name="search_location">Location</string>
    <string name="search_car_type">Car Type</string>
    <string name="search_car_brand">Car Brand</string>
    <string name="search_plate_number">Plate Number</string>
    <string name="search_sex">Sex</string>
    <string name="query_by_distance">Query by distance</string>
    <string name="selection_distance">Selection distance</string>
    <string name="add_mobile_contact">Add contacts</string>
    <string name="select_car_brand">Select car brand</string>
    <string name="select_car_type">Select car type</string>
    <string name="car_brand">Brand:</string>
    <string name="write_brand">Input brand</string>
    <string name="report_car_type">Brand report</string>
    <string name="report">Report</string>
    <string name="not_set">Not set</string>
    <string name="only_one_team">Only One Team</string>
    <string name="no_team">No Team</string>
    <string name="poc_call">POC CALL</string>
    <string name="dialog_ok">OK</string>
    <string name="heart_time_set">Heartbeat set time</string>
    <string name="heart_set_error">Please set right heart time</string>
    <string name="pop_title_sim_status_title">Insufficient data flow</string>
    <string name="pop_title_sim_status_content">Data flow less than %1$dMB，please recharge to avoid extra charges!</string>
    <string name="button_text_i_know">I Know.</string>
    <string name="toast_tip">Tips</string>
    <string name="toast_logout">Logout?</string>
    <string name="edittext_input_login_phone_hint">Please input phone number</string>
    <string name="edittext_input_login_password_hint">Please input password</string>
    <string name="button_input_login_text">Login</string>
    <string name="textview_zxing_login_hint">Please using the key of assistant App as password</string>
    <string name="textview_inout_login_hint">Please Scan ZXing code to login</string>
    <string name="toast_input_login_phone_pwd_empty">Phone number or password cannot be empty！</string>
    <string name="toast_input_login_pwd_invalid">Password should not less than 4！</string>
    <string name="toast_input_login_phone_incompatible">Phone number invalid！</string>
    <string name="toast_input_login_timeout">Connect timed out, please relogin!</string>
    <string name="toast_input_login_succeed">Login succeed!</string>
    <string name="toast_input_login_failed">Login failed!</string>
    <string name="button_back">Back</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_delete">Delete</string>
    <string name="time_settings_gps">GPS Time</string>
    <string name="time_settings_manual">Manual</string>
    <string name="text_friend_detail_user_name">Kel</string>
    <string name="text_friend_detail_user_sex">Male 13900000001</string>
    <string name="text_friend_detail_user_autograph">Race does not mean that glory, I have seen the best of Orcs, have seen the most despicable human beings.</string>
    <string name="text_friend_detail_user_license_plate">A0001</string>
    <string name="text_friend_detail_user_location">Beijing</string>
    <string name="text_friend_detail_user_hometown">Azeroth</string>
    <string name="text_friend_detail_user_industry">Warrior</string>
    <string name="text_friend_detail_user_hobby">Hobby：Driving / Travelling</string>
    <string name="text_friend_detail_user_show_via_map">Location</string>
    <string name="text_friend_detail_user_tracklist">Tracklist</string>
    <string name="text_friend_detail_user_add_friend">Add friend</string>
    <string name="text_friend_detail_user_delete_friend">Delete friend</string>
    <string name="text_all_members_team_priority_setting">Priority setting:</string>
    <string name="text_member_menu_priority_setting">Chat priority settings</string>
    <string name="text_member_menu_nickname_setting">Nick name settings</string>
    <string name="text_member_menu_supervisor_setting">Supervisor settings</string>
    <string name="text_report_car_type_hint">Please input brand and model information (required)</string>
    <string name="text_report_car_type_detail_hint">* Please fill in the complete brand and the model of the brand</string>
    <string name="menu_item_documents">My documents</string>
    <string name="menu_item_friends_nearby">Friends nearby</string>
    <string name="menu_item_zxing_scan">Zxing scan</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_version_check">Version check</string>
</resources>