<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/my_documents"
            android:icon="@drawable/ic_my_file"
            android:visible="false"
            android:title="@string/menu_item_documents" />
        <item
            android:id="@+id/add_friend"
            android:icon="@drawable/location"
            android:visible="false"
            android:title="@string/menu_item_friends_nearby" />
        <item
            android:id="@+id/scan"
            android:icon="@drawable/ic_menu_camera"
            android:visible="false"
            android:title="@string/menu_item_zxing_scan" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_item_settings" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/update"
            android:title="@string/menu_item_version_check" />
    </group>

    <!--<item android:title="通信">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="分享" />
        </menu>
    </item>-->

    <item android:title="退出">
        <menu>
            <item
                android:id="@+id/nav_loginout"
                android:icon="@drawable/ic_menu_send"
                android:title="登出" />
            <item
                android:id="@+id/nav_close"
                android:icon="@drawable/ic_menu_close"
                android:title="关闭" />
        </menu>
    </item>

</menu>
