<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:minWidth="250dp"
    android:orientation="vertical"
    android:background="@color/bg_icon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="35dp"
            android:paddingLeft="10dp"
            android:text="@string/report_car_type"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#BCBCBC" />
    </LinearLayout>

    <com.luobin.search.friends.car.listForSelectUsed.ClearEditText
        android:id="@+id/car_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:gravity="center_vertical"
        android:hint="@string/text_report_car_type_hint"
        android:minHeight="32dp"
        android:singleLine="true"
        android:layout_margin="5dp"
        android:textSize="15.0dip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/text_report_car_type_detail_hint"
        android:textColor="@color/red"
        android:textSize="12sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/middle"
            android:background="@drawable/button_selector"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/report"
            android:textColor="@color/white"/>

        <View
            android:id="@+id/middle"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/middle"
            android:background="@drawable/button_selector"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/button_cancel"
            android:textColor="@color/white"/>
    </RelativeLayout>

</LinearLayout>