<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="480dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/bg_panel_relative_layout"
    android:orientation="vertical">

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:datePickerMode="calendar"
        android:layout_marginTop="5dp"
        android:visibility="visible"
        android:background="@drawable/bg_selector"/>

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:textColor="@color/colorWirte"
			android:background="@drawable/button_selector"            
			android:text="@string/button_cancel"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="14dp"
            android:textColor="@color/colorWirte"
            android:background="@drawable/button_selector"
            android:text="@string/button_confirm"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/setting_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@id/btns"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/btn_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_settings_gps"
            android:textColor="@color/colorWirte"
            android:textSize="12dp"
            android:background="@drawable/bg_selector"
        />

        <RadioButton
            android:id="@+id/btn_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_settings_manual"
            android:textColor="@color/colorWirte"
            android:textSize="12dp"
            android:background="@drawable/bg_selector"
       />

    </RadioGroup>

</RelativeLayout>